<resources>
    <string name="app_name">MTP Scanner</string>
    <string name="hello_blank_fragment">TicketPartner</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back_sign_in">Welcome back, Sign In with your credentials below Sign In with your credentials</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="google">Google</string>
    <string name="welcome_to_event_com">Welcome to MyTicketPartner.com</string>
    <string name="apple">Apple</string>
    <string name="verify">Verify</string>
    <string name="send_otp">sendOTP</string>
    <string name="elevate_your_events">Elevate Your Events, Effortlessly Organized!</string>
    <string name="don_not_have_account">Don’t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="join_as_administrator">Join as a Admission Staff</string>
    <string name="otp">OTP</string>
    <string name="Continue">Continue</string>
    <string name="organized">Organized</string>
    <string name="remember_it">Remember it?</string>
    <string name="new_password">New Password</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="not_yet_received">Not received yet?</string>
    <string name="resend">Resend</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="you_will_receive_otp_in">You will receive OTP in</string>
    <string name="you_will_receive_otp_in_2_min">You will receive OTP in 2:00s</string>
    <string name="privacy_policy">By signing up, I agree to the TicketPartner Terms of Service and Privacy Policy.</string>
    <string name="create_your_account">Create your account</string>
    <string name="create_account">Create Account</string>
    <string name="choose_an_option_below">Choose an option below to begin managing events with the TicketSpark platform!</string>
    <string name="lorem_ipsum_dolor">Lorem ipsum dolor sit amet consectetur. Consequat pretium feugiat dui vitae.</string>
    <string name="next">Next</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="we_will_share_you_default_password">We will share you the default password, so please enter your email address below.</string>
    <string name="your_password_link_has_been_sent">Your reset password link has been sent to your registered email address. Please check your email.</string>
    <string name="please_enter_email">Please enter your email address</string>
    <string name="please_enter_valid_email">Please enter valid email address</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_mobile">Please enter mobile number</string>
    <string name="otp_is_required">OTP is required</string>
    <string name="please_verify_your_email">Please verify your email</string>
    <string name="please_verify_your_phone">Please verify your phone number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="please_enter_new_pass">Please enter new password</string>
    <string name="please_enter_con_pass">Please enter confirm password</string>
    <string name="new_password_and_confirm_password_should_same">New password and confirm password should be same</string>
    <string name="account_has_been_created_successfully">Congratulations! Your account has been created successfully.</string>
    <string name="organization_name">Organization Name</string>
    <string name="country">Country</string>
    <string name="organization_logo">Organization Logo</string>
    <string name="change_logo">Change Logo</string>
    <string name="tell_us_about_your_organization">Tell us about your Organization</string>
    <string name="website_hint">"e.g.www.myticketpartner.com"</string>
    <string name="website">"Website"</string>
    <string name="social_network_feeds">"Social Network Feeds"</string>
    <string name="facebook_page">"Facebook Page"</string>
    <string name="twitter">"Twitter"</string>
    <string name="linked_in">"LinkedIn"</string>
    <string name="instagram">"Instagram"</string>
    <string name="facebook_hint_ink">"e.g.www.facebook.com"</string>
    <string name="instagram_hint_ink">"e.g.www.instagram.com"</string>
    <string name="twitter_hint_link">"e.g.www.twitter.com"</string>
    <string name="linked_in_hint_link">"e.g.www.linkedin.com"</string>
    <string name="save_and_continue">"Save &amp; Continue"</string>
    <string name="enter_organization_name">"Enter Organization name"</string>
    <string name="select_country">"Select Country"</string>
    <string name="please_enter_organization_name">"Please enter organization name"</string>
    <string name="please_select_country">"Please select country"</string>
    <string name="select_change_logo_image">"Please select change logo image"</string>
    <string name="search_country">"Search Country"</string>
    <string name="empty_organization_id">"Empty organization Id"</string>
    <string name="camera">"Camera"</string>
    <string name="gallery">"Gallery"</string>
    <string name="cancel">"Cancel"</string>
    <string name="add_logo">"Add Logo"</string>
    <string name="basic_details">"Basic Details"</string>
    <string name="tickets">"Tickets"</string>
    <string name="event_setup">"Event Setup"</string>
    <string name="event_name">"Event Name"</string>
    <string name="description">"Description"</string>
    <string name="event_cover">"Event Cover"</string>
    <string name="choose_file_upload">"Choose file to upload"</string>
    <string name="max_size_10">"Maximum size 10 MB"</string>
    <string name="add_more_image">"Add more images"</string>
    <string name="media_from_past_event">"Media from past event"</string>
    <string name="add_images">"Add images"</string>
    <string name="date_time">"Date / Time"</string>
    <string name="timezone">"Timezone"</string>
    <string name="event_start_end">"Event Start &amp; End"</string>
    <string name="door_open_at">"Door Open at"</string>
    <string name="location">"Location"</string>
    <string name="create_event">"Create Event"</string>
    <string name="venue">"Venue"</string>
    <string name="online">"Online"</string>
    <string name="offline">"Offline"</string>
    <string name="to_be_announced">"To be announced"</string>
    <string name="street_address">"Street Address"</string>
    <string name="city">"City"</string>
    <string name="state">"State"</string>
    <string name="enter_location">"Enter Location"</string>
    <string name="enter_street_address">"Enter street address"</string>
    <string name="enter_city">"Enter city"</string>
    <string name="select_state">"Select State"</string>
    <string name="link_to_join_the_event">"Link to join the event"</string>
    <string name="location_name">"Location Name"</string>
    <string name="send_the_address_confirm_main">"Send the address in confirmation mail"</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="select_event_type">Select event type</string>
    <string name="event_type">Event type</string>
    <string name="select_time_zone">Select time zone</string>
    <string name="paid_ticket">Paid Ticket</string>
    <string name="on_sale">On Sale</string>
    <string name="forward_slash"> / </string>
    <string name="add_ons">Add-ons</string>
    <string name="codes">Codes</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="discount_code">Discount Code</string>
    <string name="access_code">Access Code</string>
    <string name="hint_discount_code">eg. ABH235253B</string>
    <string name="apply_this_code_automatically">Apply this code automatically</string>
    <string name="customer_can_also_access_this_code">Customers can also access this code via custom URL</string>
    <string name="your_name">Your Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_pin">Please enter your pin</string>
    <string name="enter_your_pin">Enter your pin</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="where_i_can_find_pin">Where I can find the pin?</string>
    <string name="learn_how_to_use">Learn how to use this</string>
    <string name="are_you_scanning_for_this_event">Are you scanning for this \nevent?</string>
    <string name="select_ticket_type">Select Ticket Type</string>
    <string name="select_ticket">Select Ticket</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="go_offline">Go Offline</string>
    <string name="end_scan">End Scan</string>
    <string name="end_scan_with_mark">End Scan</string>
    <string name="rfid">RFID</string>
    <string name="are_you_sure_end_scan">Are you sure you want to end the scanning for this event?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="all">All</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="physical">Physical</string>
    <string name="complimentary">Complimentary</string>
    <string name="total_tickets">Total Tickets</string>
    <string name="logout">Log Out</string>
    <string name="are_you_sure_logout">Are you sure you want to log out?</string>
    <string name="search_bar_hint">Search email, order number, name</string>
    <string name="view_details">View Details</string>
    <string name="check_in">Check in</string>
    <string name="total_scanned">Total Scanned</string>
    <string name="order_id">Order ID</string>
    <string name="payment_method">Payment method</string>
    <string name="scanReport">Scan Report</string>
    <string name="cameraPermissionRequired">Camera permission is required to use the camera.</string>
    <string name="checked">Checked</string>
    <string name="already_checked_in">Already Checked In</string>
    <string name="okay">Okay</string>
    <string name="allowed_orders">Allowed Orders</string>
    <string name="people_are_allowed_to_enter">People are allowed to enter this event.</string>
    <string name="pleases_select_ticket_types">Please select atleast 1 ticket</string>
    <string name="upload_on_live_server">Upload on live server</string>
    <string name="check_network_availability">Please check you network availability</string>
    <string name="you_do_not_have_data">"You don't have data to upload on server"</string>
    <string name="please_select_order_id">"Please select order Id"</string>
    <string name="scanned_successfully">"Scanned Successfully"</string>
    <string name="you_are_offline">"You're offline."</string>
    <string name="you_are_online">"You're online."</string>
    <string name="session_expired">"Session Expired"</string>
    <string name="required_nfc">"Required NFC"</string>
</resources>