<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".feature_login.presentation.ForgotPasswordFragment">

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_15"
            android:src="@drawable/ic_back_arrow" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_project_name_title" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="15dp"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_end="@dimen/margin_15"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignIn"
                style="@style/boldParaHeading24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_40"
                android:text="@string/forgot_your_password"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWelcomeBack"
                style="@style/regularParaText16"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/we_will_share_you_default_password"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/tvSignIn" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                style="@style/regularParaHeading12"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_25"
                android:drawablePadding="@dimen/margin_2"
                android:text="@string/email_address"
                app:layout_constraintTop_toBottomOf="@id/tvWelcomeBack"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/starMandatory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_25"
                android:src="@drawable/ic_mandatory_star"
                app:layout_constraintTop_toBottomOf="@id/tvWelcomeBack"
                app:layout_constraintStart_toEndOf="@id/tvEmail" />

            <RelativeLayout
                android:id="@+id/emailLayout"
                android:layout_width="@dimen/margin_0"
                android:layout_height="@dimen/size_48"
                android:layout_marginTop="@dimen/size_5"
                android:background="@drawable/edit_text_design"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/tvEmail">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@id/tvVerify"
                    android:background="@drawable/no_underline_et_design"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/margin_10"
                    android:textSize="@dimen/text_16" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvVerify"
                    style="@style/regularPurple12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/margin_5"
                    android:paddingEnd="@dimen/margin_10"
                    android:text="@string/send_otp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvVerifyDisable"
                    style="@style/regularGreyDisable12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="@dimen/margin_10"
                    android:visibility="gone"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingStart="@dimen/margin_5"
                    android:paddingEnd="@dimen/margin_10"
                    android:text="@string/send_otp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivEmailVerify"
                    style="@style/regularGreyDisable12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="@dimen/margin_10"
                    android:visibility="gone"
                    android:src="@drawable/ic_verified"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:paddingStart="@dimen/margin_5"
                    android:paddingEnd="@dimen/margin_10"/>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/otpLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/emailLayout">
                <include android:id="@+id/includeOtpEmail"
                    layout="@layout/otp_layout" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btnContinueLayout"
                android:layout_width="@dimen/margin_0"
                android:layout_height="@dimen/size_48"
                android:layout_marginTop="@dimen/margin_20"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/otpLayoutEmail" >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnContinue"
                    style="@style/boldWhiteText16"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_design_sign_in"
                    android:text="@string/reset"
                    android:visibility="gone"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnContinueDisable"
                    style="@style/boldWhiteText16"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/disable_continue_btn_design"
                    android:text="@string/Continue"
                    android:visibility="visible"
                    android:textAllCaps="false"/>

            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/rlSignUp"
                android:layout_width="@dimen/margin_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_25"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnContinueLayout">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDoNotHaveAcc"
                    style="@style/regularLightGrey14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:text="@string/remember_it" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSignBtn"
                    style="@style/boldPurple14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tvDoNotHaveAcc"
                    android:text="@string/sign_in" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>